# GorbatovCameraSwitcherPlugin

./: README.md
source/plugins/Gorbatov/CameraSwitcher/: CMakeLists.txt  plugin.cpp
